--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
   
   <!-- Audio element -->
   <audio id="background-music" loop>
-    <source src="https://d500.d2mefast.net/tb/a/22/rex_orange_county_pluto_projector_official_audio_mp3_32629.mp3?play" type="audio/mp3">
+    <source src="plutoprojector.mp3" type="audio/mp3">
     Your browser does not support the audio element.
   </audio>
   
